# python-genomic

./: .gitignore  .pylintrc  AUTHORS  Makefile  README.md  actions.sh  function.py  main.py  mkdocs.yml  pkgbuild.yaml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yaml  release.yml
docs/: index.md
docs/guides/en/: development.md  glossary.md  install.md  usage.md
docs/guides/it/: development.md  glossary.md  install.md  usage.md
docs/reference/enums/: cigar_operation.md
docs/reference/file_types/: bam_file.md  csv_file.md  fasta_file.md
docs/reference/sequences/: aligned_segment.md  intron.md  reference.md
docs/reference/workers/: alignment_worker.md  cli.md  main.md
genomic/: __init__.py  __main__.py  aligned_segment.py  alignment_worker.py  bam_file.py  fasta_file.py  intron.py
lib/: __init__.py  __main__.py  aligned_segment.py  alignment.py  alignment_worker.py  bam_file.py  cigar_operation.py  cli.py  csv_file.py  fasta_file.py  intron.py  reference.py  util.py
samples/bam/: test.bam  test2.bam
samples/fasta/: test.fasta
tests/: alignment_test.py  bam_file_test.py  cli_test.py  csv_file_test.py  fasta_file_test.py  intron_test.py
