[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genomic"
version = "1.0.0"
license-files = { paths = ["LICENSE"] }
authors = [
  { name="Refolli Francesco", email="frefolli@campus.unimib.it" },
  { name="Terzi Telemaco", email="tezze.terzi01@google.com" }
]
description = "Given BAM and FASTA it finds introns for reads in BAM"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "biopython==1.81",
  "numpy==1.24.2",
  "pysam==0.20.0",
  "tqdm==4.64.1"
]

[project.urls]
"Homepage" = "https://github.com/frefolli/bioinf-progetto"
"Bug Tracker" = "https://github.com/frefolli/bioinf-progetto/issues"

[project.scripts]
genomic-cli = "genomic.__main__:main"

[tool.hatch.build]
include = [
  "/genomic/*.py",
  "/samples/bam/*.bam",
  "/samples/fasta/*.fasta",
]
